<resources>
    <string name="app_name">Meme Center</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="action_settings">Settings</string>

    <!-- Drawer Strings -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_game">Games</string>
    <string name="drawer_stream">Channels</string>
    <string name="drawer_search">Search</string>
    <string name="drawer_follower">Following</string>
    <string name="drawer_login">Login</string>

    <string name="topgame_logo">This is the game logo.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
