<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@drawable/ic_home_black"
            android:title="@string/drawer_home" />
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/ic_gamepad_black"
            android:title="@string/drawer_game" />
        <item
            android:id="@+id/nav_stream"
            android:icon="@drawable/ic_voice_chat_black"
            android:title="@string/drawer_stream" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search_black"
            android:title="@string/drawer_search" />
        <item
            android:id="@+id/nav_follow"
            android:icon="@drawable/ic_group_black"
            android:title="@string/drawer_follower"
            android:visible="false" />
    </group>
</menu>